// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render all appearances 1`] = `
<Memo(FormFieldWrapper)
  id="standard"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render all appearances 2`] = `
<Memo(FormFieldWrapper)
  id="error"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render all appearances 3`] = `
<Memo(FormFieldWrapper)
  id="success"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render error messages if appearance set to InputAppearance.Error 1`] = `
<Memo(FormFieldWrapper)
  errors={
    [
      "This is an error message",
      "this is a second error message",
    ]
  }
  id="textarea"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render no error messages if appearance set to InputAppearance.Success 1`] = `
<Memo(FormFieldWrapper)
  errors={
    [
      "I'm not displayed",
    ]
  }
  id="textarea"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render node as inputLabel 1`] = `
<Memo(FormFieldWrapper)
  id="textarea"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render string inputLabel 1`] = `
<Memo(FormFieldWrapper)
  id="textarea"
>
  <Component />
</Memo(FormFieldWrapper)>
`;

exports[`Textarea should render with hidden label if \`showInputLabel\` is set to false 1`] = `
<Memo(FormFieldWrapper)
  id="textarea"
>
  <Component />
</Memo(FormFieldWrapper)>
`;
